# backend/laravel/app/Http/Controllers/Api/StudentController.php
@@ -149,7 +149,8 @@ class StudentController extends Controller
      *             @OA\Property(property="exam_date", type="date"),
      *             @OA\Property(property="exam_score", type="string"),
      *             @OA\Property(property="image", type="string", format="binary"),
-     * required={"exam_type_id","exam_number","exam_date","image"}
+     *             @OA\Property(property="title", type="string" ,example="Waec result",description="this is used to identify document in the document table relationship"),
+     *             required={"exam_type_id","exam_number","exam_date","image","title"}
      *         ),),
      * 
      *             @OA\Property(property="schools_attended", type="array",
@@ -160,6 +161,8 @@ class StudentController extends Controller
      *             @OA\Property(property="graduation_year", type="date"),
      *             
      *             @OA\Property(property="image", type="string", format="binary"),
+     *             @OA\Property(property="title", type="string" ,example="First leaving school certificate",description="this is used to identify document in the document table relationship"),
+     *              required={"school_name","graduation_year","image","title"}
      * 
      *         ),),
      * 
@@ -398,6 +401,7 @@ class StudentController extends Controller
                         if ($applicationSchools->save() && $document->save()) {
                             $applicationDocument->student_id = $student->id;
                             $applicationDocument->document_id = $document->id;
+                            $applicationDocument->title = $schoolAttended["title"];
                             $applicationDocument->status = 1;
                             $applicationDocument->save();
                         }
@@ -442,6 +446,7 @@ class StudentController extends Controller
                         // add result application document relationship 
                         $resultApplicationDocument->student_id = $student->id;
                         $resultApplicationDocument->document_id = $resultDocument->id;
+                        $resultApplicationDocument->title = $result["title"];
                         $resultApplicationDocument->status = 1;
                         $examResult->save();
                         $resultApplicationDocument->save();
